force-app/main/default/objects/Fee__c/fields/Fixed_Billing__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Charge a fixed &apos;Amount&apos; if this field is checked.</description>
    <inlineHelpText>Charge a fixed &apos;Amount&apos; if this field is checked.</inlineHelpText>
    <label>Fixed Billing</label>
    <type>Checkbox</type>
</CustomField>