force-app/main/default/objects/Fee__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Schedule__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>