force-app/main/default/objects/Fee__c/fields/GST_Applicable__c.field-meta.xml
<CustomField>
    <fullName>GST_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Applies GST if checked.</description>
    <inlineHelpText>Applies GST if checked.</inlineHelpText>
    <label>GST Applicable</label>
    <type>Checkbox</type>
</CustomField>