force-app/main/default/objects/Fee__c/fields/Invoice_Label__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Label__c</fullName>
    <description>Fee label that appears on the Invoice.</description>
    <inlineHelpText>Fee label that appears on the Invoice.</inlineHelpText>
    <label>Invoice Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>