force-app/main/default/objects/Fee__c/fields/Override__c.field-meta.xml
<CustomField>
    <fullName>Override__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, it allows the user to remove the Fee at enrollment.</inlineHelpText>
    <label>Override</label>
    <type>Checkbox</type>
</CustomField>