force-app/main/default/objects/Fee__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Refer to a parent fee record</description>
    <inlineHelpText>Select a parent fee record</inlineHelpText>
    <label>Parent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Fee__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Primary</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Fee__c</referenceTo>
    <relationshipLabel>Related Fees</relationshipLabel>
    <relationshipName>Related_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>