force-app/main/default/objects/Fee__c/fields/Prorate__c.field-meta.xml
<CustomField>
    <fullName>Prorate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Applicable only for tuition fee.</inlineHelpText>
    <label>Prorate</label>
    <type>Checkbox</type>
</CustomField>