force-app/main/default/objects/Fee__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Fee will be applied (checked) by default at the time of enrollment. The Override field can used used to allow user to remove (uncheck) the Fee.</description>
    <inlineHelpText>The Fee will be applied (checked) by default at the time of enrollment. The Override field can used used to allow the user to remove (uncheck) the Fee.</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>