force-app/main/default/objects/Fee__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>