force-app/main/default/objects/Fee__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <description>Price Per Session.</description>
    <inlineHelpText>Price Per Session.</inlineHelpText>
    <label>Unit Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>