force-app/main/default/objects/Fee__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <label>Number of Units</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>