force-app/main/default/objects/Fee__c/recordTypes/Primary.recordType-meta.xml
<RecordType>
    <fullName>Primary</fullName>
    <active>true</active>
    <description>Refers to parent fee</description>
    <label>Primary</label>
</RecordType>