force-app/main/default/objects/Fee__c/recordTypes/Secondary.recordType-meta.xml
<RecordType>
    <fullName>Secondary</fullName>
    <active>true</active>
    <description>Refers to a child record</description>
    <label>Secondary</label>
</RecordType>