force-app/main/default/objects/Fee__c/validationRules/BillingUnitsMandatoryForTuitionFee.validationRule-meta.xml
<ValidationRule>
    <fullName>BillingUnitsMandatoryForTuitionFee</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
     ISPICKVAL(Type__c ,&apos;Tuition Fee&apos;),
  OR(
     ISPICKVAL(Schedule__c ,&apos;Fixed&apos;), 
     ISPICKVAL(Schedule__c ,&apos;Ongoing&apos;)
     ),
  OR(
     ISBLANK(Units__c),
     ISBLANK(Unit_Price__c)
     ) 
   )</errorConditionFormula>
    <errorMessage>Please enter &quot;Number of Units&quot; and &quot;Unit Price&quot; for Tuition fee type.</errorMessage>
</ValidationRule>