force-app/main/default/objects/Fee__c/validationRules/Common_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Common_Validation</fullName>
    <active>false</active>
    <description>This validation rule is use to validate amount, number of units and units price must be greater than zero and must select one option from required or override.</description>
    <errorConditionFormula>Amount__c &lt;= 0 || Unit_Price__c &lt;= 0 || Units__c &lt;= 0 ||
(Required__c == False &amp;&amp;  Override__c == False)</errorConditionFormula>
    <errorMessage>Please input valid information as in amount, number of units and unit price must be greater than zero with select at least one from required or override checkbox.</errorMessage>
</ValidationRule>