force-app/main/default/objects/Fee__c/listViews/All_Ongoing_Fees.listView-meta.xml
<ListView>
    <fullName>All_Ongoing_Fees</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Units__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Type__c</columns>
    <columns>Frequency__c</columns>
    <columns>Required__c</columns>
    <columns>Schedule__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Schedule__c</field>
        <operation>equals</operation>
        <value>Ongoing</value>
    </filters>
    <label>All Ongoing Fees</label>
</ListView>