force-app/main/default/objects/Fee__c/listViews/All_Secondary_Fees.listView-meta.xml
<ListView>
    <fullName>All_Secondary_Fees</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Frequency__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Fee__c.Secondary</value>
    </filters>
    <label>All Secondary Fees</label>
</ListView>